--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,64 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --bg-primary: #040714;
+  --bg-secondary: #090b13;
+  --bg-blue: #0063e5;
+  --text-primary: #f9f9f9;
+  --text-dark: #000000;
+  --text-secondary: #f3f3f3;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: "AvenirBlack";
+  src: local("AvenirBlack"),
+    url(assets/fonts/AvenirLTSd-Black.otf) format("opentype");
+}
+
+@font-face {
+  font-family: "AvenirBook";
+  src: local("AvenirBook"),
+    url(assets/fonts/AvenirLTSd-Book.otf) format("opentype");
+}
+@font-face {
+  font-family: "AvenirRoman";
+  src: local("AvenirRoman"),
+    url(./assets/fonts/AvenirLTSd-Roman.otf) format("opentype");
+}
+
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Avenir-Roman, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: var(--text-primary);
+  font-weight: normal;
+  font-style: normal;
+  scroll-behavior: smooth;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.font-weight-semi-bold {
+  font-weight: 600;
+}
+
+ul,
+p {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: white;
 }
